@@ -1,0 +1,27 @@
+<%args>
+
+</%args>
+<%init>
+
+	Tab::Account->set_sql( null_paradigms => "
+		select distinct account.*
+		from account
+		where account.paradigm is not null
+		order by id");
+
+	my @accounts = Tab::Account->search_null_paradigms;
+
+	my $counter;
+
+	foreach my $account (@accounts) { 
+		$account->setting("paradigm", "text", $account->paradigm);
+		$counter++;
+
+		unless ($counter % 30) { 
+			Tab::debuglog("Did $counter accounts");
+		}
+	}
+
+	$m->print("Fin");
+
+</%init>
