@@ -22,7 +22,7 @@
 
 		<span class="inline centeralign" style="margin-left: 15px;">
 			<form action="paradigm_save.mhtml" method="post">
-			<textarea class="budgeleft" name="paradigm" rows="20"><% $account->paradigm %></textarea>
+			<textarea class="budgeleft" name="paradigm" rows="20"><% $account->setting("paradigm") %></textarea>
 		</span>
 
 		<span class="liblrow rightalign block">
