@@ -11,6 +11,7 @@
 		# Authkey must correspond to a session in the database
 		my @sessions = Tab::Session->search( authkey => $auth_key, userkey => $user_key);
 
+
 		if (@sessions) { 
 
 			my $session = shift @sessions;
@@ -29,9 +30,7 @@
 			my $user_crypt = Digest::SHA::sha1_hex($hash_key, $account->id);
 
 			if ($session && $account && ($user_crypt == $user_key)) {
-
 				return ($account, $session);
-	
 			}
 
 		}
@@ -40,7 +39,7 @@
 
 		unless ($cookies{'Tab-NoChocolateChip'}) { 
 			my $base_url = $r->hostname.$r->uri."?".$r->args if $r;
-			$m->redirect("http://tabauth.idebate.org/index.mhtml?url=$base_url");
+			$m->redirect("http://tabroom.idebate.org/index.mhtml?url=$base_url");
 		}
 
 	}
