@@ -1,5 +1,6 @@
 
-	- 
+	- Added support for joint/unified login with IDEA once they activate their
+	  Bakery system
 
 	- Fixed the round robin pairing algorithm to work much better no matter how
 	  many debaters you fling at it.
